--- a/style/styleCalen.css
+++ b/style/styleCalen.css
@@ -288,6 +288,7 @@ visibility: hidden;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  gap: 0.5em;
   padding-left: 4px;
 }
 .events .event {
